feat: revise public meta title

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover, user-scalable=0, maximum-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="蕃茄时光|Tomato Time"
+      content="一个遵循蕃茄工作法的笔记，效率工具"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React Home</title>
+    <title>🍅 蕃茄时光 | Tomato Time</title>
   </head>
   <body ontouchstart>
     <noscript>You need to enable JavaScript to run this app.</noscript>
