feat: add icon to document title

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1578985_vlo6r7c6gsm.css" />
+    <link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/237/tomato_1f345.png" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>🍅 蕃茄时光 | Tomato Time</title>
+    <title>蕃茄时光 | Tomato Time</title>
   </head>
   <body ontouchstart>
     <noscript>You need to enable JavaScript to run this app.</noscript>
