--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="utf-8" />
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport"
-    content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover, user-scalable=0, maximum-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="蕃茄时光|Tomato Time" content="一个遵循蕃茄工作法的笔记，效率工具" />
-  <!--
+  <head>
+    <meta charset="utf-8" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover, user-scalable=0, maximum-scale=1"
+    />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="蕃茄时光|Tomato Time"
+      content="一个遵循蕃茄工作法的笔记，效率工具"
+    />
+    <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <link rel="stylesheet" href="//at.alicdn.com/t/font_1578985_vlo6r7c6gsm.css" />
-  <!-- ionicons图标 -->
-  <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
-  <link rel="stylesheet" href="../src/styles/var.less" />
-  <link rel="icon"
-    href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/237/tomato_1f345.png" />
-  <!--
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      rel="stylesheet"
+      href="//at.alicdn.com/t/font_1578985_vlo6r7c6gsm.css"
+    />
+
+    <!-- iconfont svg icon -->
+    <script src="//at.alicdn.com/t/font_1578985_15afdwkn5hc.js"></script>
+    <link
+      rel="icon"
+      href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/237/tomato_1f345.png"
+    />
+    <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -28,13 +37,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>蕃茄时光 | Tomato Time</title>
-</head>
+    <title>蕃茄时光 | Tomato Time</title>
+  </head>
 
-<body ontouchstart>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-  <!--
+  <body ontouchstart>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -44,6 +53,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-</body>
-
+  </body>
 </html>
