fix: add font face and editor icon

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,12 @@
       href="//at.alicdn.com/t/font_1578985_vlo6r7c6gsm.css"
     />
 
+    <link
+      type='text/css'
+      rel="stylesheet"
+      href="./iconfont.css"
+    />
+
     <!-- iconfont svg icon -->
     <script src="//at.alicdn.com/t/font_1578985_15afdwkn5hc.js"></script>
     <link
